# Python-Hypermedia

./: .gitignore  README.md  example.pyproject.toml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  ruff-linter.yml
apps/: README.md
apps/dunamismax/: pyproject.toml
apps/image-gallery/: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/image-gallery/src/image_gallery/: database.py  main.py  models.py  routers.py
apps/image-gallery/src/image_gallery/static/css/: main.css
apps/image-gallery/src/image_gallery/templates/: base.html  index.html
apps/image-gallery/src/image_gallery/templates/partials/: gallery.html  image_card.html
apps/markdown-editor/: pyproject.toml
apps/micro-blog/: pyproject.toml
apps/quiz-app/: pyproject.toml
apps/system-dashboard/: pyproject.toml
apps/text-adventure/: pyproject.toml
apps/todo-app/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tasks.py
apps/todo-app/src/: alembic.ini
apps/todo-app/src/alembic/: env.py
apps/todo-app/src/alembic/versions/: 1533e2ed7dee_initial_migration.py
apps/todo-app/src/todo_app/: config.py  database.py  main.py  models.py  routers.py
apps/todo-app/src/todo_app/templates/: base.html  index.html
apps/todo-app/src/todo_app/templates/partials/: todo_item.html  todos.html
docs/: Amazing Python Repositories.md  Hypermedia Stack Project Ideas.md  Projects and Boilerplates.md  README.md  The Zen of Python.md
docs/project/: Currently_Building.md  The Python Hypermedia Stack.md
docs/python/: Amazing Python Repositories.md
playground/: README.md
playground/test-app/: pyproject.toml
playground/text-adventure/: pyproject.toml
scripts/: README.md
scripts/app_cleaner/: README.md  clean.py  pyproject.toml
scripts/app_runner/: README.md  pyproject.toml  run.py
scripts/project_cleanup/: README.md  cleanup.py  pyproject.toml
scripts/project_setup/: README.md  pyproject.toml  setup.py
