# ==============================================================================
#                                 PROJECT
# ==============================================================================
[project]
name = "dunamismax"
version = "0.1.0"
description = "My personal Blog and Portfolio website."
requires-python = ">=3.9"
# Add your project's core dependencies here.
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "python-multipart>=0.0.20",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "httpx",
]

# To install dev dependencies, run: `uv pip install -e .[dev]`
[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "typer",
]
