[project]
name = "todo-app"
version = "0.1.0"
description = "A simple hypermedia To-Do application using FastAPI and HTMX."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "python-multipart>=0.0.20",
    "ruff==0.12.2",
    "click==8.2.1",
    "h11==0.16.0",
    "starlette==0.47.1",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "typing_extensions==4.14.1",
    "typing_inspection==0.4.1",
    "annotated_types==0.7.0",
    "anyio==4.9.0",
    "sniffio==1.3.1"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"] # Standard checks: pyflakes, pycodestyle, isort

[tool.ruff.format]
quote-style = "double"
