[project]
name = "todo-app"
version = "0.1.0"
description = "A simple hypermedia To-Do application using FastAPI and HTMX."
authors = [{ name = "dunamismax", email = "dunamismax@google.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "python-multipart>=0.0.20",
    "ruff==0.12.2"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"] # Standard checks: pyflakes, pycodestyle, isort

[tool.ruff.format]
quote-style = "double"
