[project]
name = "text-adventure"
version = "0.1.0"
description = "A text adventure game."
authors = [{ name = "dunamismax", email = "dunamismax@google.com" }]
dependencies = [
    "ruff==0.12.2"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"] # Standard checks: pyflakes, pycodestyle, isort

[tool.ruff.format]
quote-style = "double"