# ==============================================================================
#                                 PROJECT
# ==============================================================================
[project]
name = "text-adventure"
version = "0.1.0"
description = "A text adventure game."
requires-python = ">=3.9"
# Add your project's core dependencies here.
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "python-multipart>=0.0.20",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "httpx",
]