[project]
name = "app-cleaner"
version = "0.1.0"
description = "A script to clean temporary files and directories from the monorepo."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
dependencies = [
    "typer[all]==0.12.3",
    "rich==13.7.1",
    "click==8.1.7",
    "typing-extensions==4.12.2",
    "typer==0.12.3"
]

[project.optional-dependencies]
dev = ["ruff==0.4.10"]
