[project]
name = "hypermedia-scripts"
version = "0.1.0"
description = "Scripts for managing the Python-Hypermedia monorepo."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
dependencies = [
    "typer[all]==0.16.0",
    "questionary==2.1.0",
    "prompt-toolkit==3.0.51",
    "wcwidth==0.2.13",
    "click==8.2.1",
    "typing-extensions==4.14.1",
]

[tool.uv]
dev-dependencies = []
