# ==============================================================================
#                                 PROJECT
# ==============================================================================
[project]
name = "project-cleanup"
version = "0.1.0"
description = "A script to clean temporary files and directories from the monorepo."
requires-python = ">=3.9"
# Add your project's core dependencies here.
dependencies = [
]

# To install dev dependencies, run: `uv pip install -e .[dev]`
[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "typer",
]

# ==============================================================================
#                                  TOOLS
# ==============================================================================
[tool.ruff]
# Set the minimum Python version to target for linting and formatting.
target-version = "py39"
line-length = 88
# Exclude common directories from linting and formatting. [4]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
# A curated set of rules for high-quality, modern Python code.
# For a full list of rules, see: https://docs.astral.sh/ruff/rules/
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "B905", # `zip()` without `strict=`. Can be removed if you use Python 3.10+ and want to enforce it.
    "E501", # Line too long; handled by the ruff formatter.
]
# Enable preview mode to get the latest rules and checks. [10]
preview = true

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Use spaces for indentation.
indent-style = "space"
# Enable preview mode for the latest formatting styles.
preview = true

# ==============================================================================
[tool.mypy]
# For a full list of options, see: https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.9"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true