# ==============================================================================
#                                 PROJECT
# ==============================================================================
[project]
name = "project-cleanup"
version = "0.1.0"
description = "A script to clean temporary files and directories from the monorepo."
requires-python = ">=3.9"
# Add your project's core dependencies here.
dependencies = []