# ==============================================================================
#                                 PROJECT
# ==============================================================================
[project]
name = "project-setup"
version = "0.1.0"
description = "A script to set up all projects in the monorepo."
requires-python = ">=3.9"
# Add your project's core dependencies here.
dependencies = []